<resources>
  <string name="app_name">Groupi</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_runtime_version">2</string>
</resources>